--- a/templates/agenda/index.html
+++ b/templates/agenda/index.html
@@ -49,6 +49,7 @@
       </div>
       <button class="btn btn-outline-primary" id="inputGroup-sizing-lg" type="submit">
         <i class="bi bi-search"></i>
+        <i class="bi bi-moon-fill"></i>
       </button>
     </div>
   </form>
