--- a/templates/agenda/index.html
+++ b/templates/agenda/index.html
@@ -1,17 +1,31 @@
 <!-- slideshow -->
-<header class="container-lg">
+<header>
+  <img src="/assets/motif/logo-mamasound-blanc-bis.png" class="img-thumbnail logo bg-black" alt="...">
+  <div class="header">
+    <h1>L'agenda musical à votre portée !</h1>
+    <div class="rs">
+      <img src="/assets/icon/facebook.svg" class="img-thumbnail bg-black" alt="...">
+      <img src="/assets/icon/insta.svg" class="img-thumbnail bg-black" alt="...">
+      <img src="/assets/icon/youtube.svg" class="img-thumbnail bg-black" alt="...">
+    </div>
+    <li class="qsn">
+      <a href="">Qui sommes-nous ?</a>
+    </li>
+  </div>
+
+
   <div id="eventCarousel" class="carousel slide">
     <div class="carousel-inner" style="max-height: 33vh;">
       <div class="carousel-item active">
-        <img style="background-color: var(--kouler-kari)" src="../assets/motif/sevronkler.svg" class="d-block w-100"
+        <img style="background-color: var(--kouler-kari)" src="/assets/img/13-vent-img.jpg" class="d-block w-100 object-fit-fill"
           alt="...">
       </div>
       <div class="carousel-item">
-        <img style="background-color: var(--kouler-losean)" src="../assets/motif/sevronkler.svg" class="d-block w-100"
+        <img style="background-color: var(--kouler-losean)" src="/assets/img/passopark-img.jpg" class="d-block w-100 object-fit-fill"
           alt="...">
       </div>
       <div class="carousel-item">
-        <img style="background-color: var(--kouler-letsi)" src="../assets/motif/sevronkler.svg" class="d-block w-100"
+        <img style="background-color: var(--kouler-letsi)" src="/assets/img/pop-up-img.jpg" class="d-block w-100 object-fit-fill"
           alt="...">
       </div>
     </div>
@@ -26,6 +40,50 @@
   </div>
 </header>
 
+<nav class="nav-agenda">
+  <div>
+    <a href=""><img src="/assets/img/nav/agenda.svg" alt=""></a>
+    <a href=""><img src="/assets/img/nav/mAMA EVENTS.svg" alt=""></a>
+    <a href=""><img src="/assets/img/nav/pRESTA.svg" alt=""></a>
+    <a href=""><img src="/assets/img/nav/BOUTIK.svg" alt=""></a>
+    <a href=""><img src="/assets/img/nav/INFO.svg" alt=""></a>
+  </div>
+</nav>
+
+<nav class="d-flex flex-row mb-3 >
+  <ul class="nav-a nav-underline">
+    <div class="content content2">
+    <li class="nav-item nav-a2">
+      <i class="bi bi-mic"></i>
+      <a class="active" href="">Concerts</a>
+    </li>
+   </div>
+    <div class="content">
+      <li class="nav-item nav-a2">
+      <i class="bi bi-stars"></i>
+      <a class="nav-link" href="">Spectacles</a>
+    </li>
+   </div>
+   <div class="content">
+    <li class="nav-item nav-a2">
+      <i class="bi bi-camera-reels"></i>
+      <a class="nav-link" href="">Cinéma</a>
+    </li class="nav-a2">
+   </div>
+    <div class="content">
+      <li class="nav-item nav-a2">
+      <i class="bi bi-heart"></i>
+      <a class="nav-link" href="">Associatif</a>
+    </li>
+   </div>
+   <div class="content">
+    <li class="nav-item nav-a2">
+      <i class="bi bi-music-note-list"></i>
+      <a class="nav-link" href="">Festival</a>
+    </li>
+   </div>
+  </ul>
+</nav>
 <section class="container-lg p-3 sticky-top bg-body" style="height: fit-content;">
   <!-- search and filtering -->
   <form class="my-3" action=".">
@@ -126,6 +184,7 @@
           Tarif solidaire
         </label>
       </div>
+      coucou
       <div class="position-absolute bottom-0 start-0 end-0 p-3 ">
         <a href="." class="btn btn-primary d-block">Valider</a>
       </div>
