--- a/templates/base.html
+++ b/templates/base.html
@@ -10,30 +10,67 @@
   <meta name="robots" content="noindex, nofollow" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="$base_url/assets/vars.css">
+  <link rel="stylesheet" href="$base_url/assets/theme.css">
   <script type="module" src="$base_url/assets/js/theme-switcher.js"></script>
 </head>
 
 <body>
 
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar bg-black">
     <div class="container-lg">
       <a class="navbar-brand" href="$base_url/agenda/">
-        Le Tiers-Lustre
+        Mama Sound
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu"
+      <button class="navbar-toggler bg-body" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu"
         aria-controls="mainMenu" aria-expanded="false" aria-label="Ouvrir le menu">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="mainMenu">
+      <div class="collapse navbar-collapse bg-body-tertiary" id="mainMenu">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
+            <i class="bi bi-calendar-date"></i>
             <a class="nav-link $agenda_link_class" href="$base_url/agenda/">
               Agenda
             </a>
           </li>
+
+          <li class="nav-item dropdown">
+            <i class="bi bi-bookmark-plus"></i>
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Catégorie agenda</a>
+            <ul class="dropdown-menu sub-ctg">
+              <li><i class="bi bi-mic"></i><a class="dropdown-item" href="#">Concerts</a></li>
+              <li><i class="bi bi-stars"></i><a class="dropdown-item" href="#">Spectacles</a></li>
+              <li><i class="bi bi-camera-reels"></i><a class="dropdown-item" href="#">Cinéma</a></li>
+              <li><i class="bi bi-heart"></i><a class="dropdown-item" href="#">Associatif</a></li>
+              <li><i class="bi bi-music-note-list"></i><a class="dropdown-item" href="#">Festival</a></li>
+            </ul>
+          </li>
+
           <li class="nav-item">
+            <i class="bi bi-megaphone"></i>
+            <a class="nav-link" href="."> Mama Events
+            </a>
+          </li>
+          <li class="nav-item">
+            <i class="bi bi-clipboard-check"></i>
+            <a class="nav-link" href="."> Prestation
+            </a>
+          </li>
+          <li class="nav-item">
+            <i class="bi bi-cart-plus"></i>
+            <a class="nav-link" href="."> Boutique
+            </a>
+          </li>
+          
+          <li class="nav-item">
+            <i class="bi bi-info-circle"></i>
+            <a class="nav-link" href="."> + infos
+            </a>
+          </li>
+          <li><hr class="divider"></li>
+          <li class="nav-item">
+            <i class="bi bi-balloon-heart"></i>
             <a class="nav-link" href="."> Appels à volontaires <span class="badge rounded-pill bg-info text-dark"> 7 <span
                   class="visually-hidden">
                   appels</span>
@@ -41,6 +78,7 @@
             </a>
           </li>
           <li class="nav-item">
+            <i class="bi bi-chat-dots"></i>
             <a class="nav-link" href=".">Aide et contact</a>
           </li>
         </ul>
@@ -50,7 +88,8 @@
               Jackie Dulac
             </a>
             <ul class="dropdown-menu dropdown-menu-lg-end">
-              <li>
+              <li class="sub-menu">
+                <i class="bi bi-piggy-bank"></i>
                 <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
                   Tirelire
                   <span class="ms-2">
@@ -59,13 +98,35 @@
                   </span>
                 </a>
               </li>
-              <li>
+              <li class="sub-menu">
+                <i class="bi bi-ticket-perforated"></i>
                 <a class="dropdown-item" href="#">Réservations</a>
               </li>
-              <li>
+              <li class="sub-menu">
+                <i class="bi bi-person-badge"></i>
+                <a class="dropdown-item" href="#">Mes adhésions</a>
+              </li>
+              <li class="sub-menu">
+                <i class="bi bi-cash-coin"></i>
+                <a class="dropdown-item" href="#">Mes transactions</a>
+              </li>
+              <li class="sub-menu">
+                <i class="bi bi-stopwatch"></i>
+                <a class="dropdown-item" href="#">Badgeuse</a>
+              </li>
+              <li class="sub-menu">
+                <i class="bi bi-database"></i>
+                <a class="dropdown-item" href="#">Mes données</a>
+              </li>
+              <li class="sub-menu">
+                <i class="bi bi-x-circle"></i>
+                <a class="dropdown-item" href="#">Carte perdu ?</a>
+              </li>
+              <li class="sub-menu">
+                <i class="bi bi-person-circle"></i>
                 <a class="dropdown-item" href="#">Profil</a>
               </li>
-              <li>
+              <li class="sub-menu">
                 <hr class="dropdown-divider">
               </li>
               <li>
