--- a/templates/agenda/event-free/index.html
+++ b/templates/agenda/event-free/index.html
@@ -1,9 +1,10 @@
 
+<img src="/assets/motif/logo-mamasound-blanc-bis.png" class="img-thumbnail logo bg-black" alt="...">
 <main class="container-lg">
-  <header class="mb-3">
+  <header class="container-fluid mb-3">
     <img style="background-color: var(--kouler-sousou); max-height: 33vh;"
-      src="../../assets/motif/sevronkler.svg"
-      class="d-block w-100 mb-3 object-fit-cover"
+      src="/assets/img/img-boeuf-lampions.png"
+      class="d-block w-100 mb-3 object-fit-fill"
       alt="...">
     <h1>Bœuf des Lampions</h1>
   </header>
@@ -18,7 +19,10 @@
     <span class="badge text-bg-info me-1">Accès PMR</span>
   </p>
 
-  <p class="lead">
+  <h2 class="mt-5">Mar. 13 sept. | Saint-Jean-de-Védas <br>
+    MAKASHE FEST : HORIZ'ARTS au Boeuf des lampions !</h2>
+
+  <p class="lead mt-5">
     Tous les vendredis c'est la scène ouverte des Lampions au Café de
     l'Ampoule ! Ramène tes oreilles, peut-être un instrument ou quelques vers,
     et viens profiter des talents du quartier Pourtouche dans une ambiance
@@ -28,9 +32,9 @@
 
   <div id="eventCarousel" class="carousel slide mb-3">
     <div class="carousel-inner" style="max-height: 33vh;">
-      <div class="carousel-item active">
-        <img style="background-color: var(--kouler-kari)" src="../../assets/motif/sevronkler.svg" class="d-inline-block w-50"
-          alt="..."><img style="background-color: var(--kouler-losean)" src="../../assets/motif/sevronkler.svg" class="d-inline-block w-50"
+      <div class="carousel-item active d-flex">
+        <img style="background-color: var(--kouler-kari)" src="/assets/img/artiste1.webp" class="d-inline-block w-50"
+          alt="..."><img style="background-color: var(--kouler-losean)" src="/assets/img/artiste2.webp" class="d-inline-block w-50"
           alt="...">
       </div>
       <div class="carousel-item">
