--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse bg-body-tertiary" id="mainMenu">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav me-auto gap-3">
           <li class="nav-item">
             <i class="bi bi-calendar-date"></i>
             <a class="nav-link $agenda_link_class" href="$base_url/agenda/">
@@ -82,7 +82,7 @@
             <a class="nav-link" href=".">Aide et contact</a>
           </li>
         </ul>
-        <div class="nav d-flex mb-0">
+        <div class="nav d-flex mb-0 pt-3">
           <div class="nav-item dropdown-center">
             <a class="nav-link dropdown-toggle ps-0 ps-lg-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Jackie Dulac
@@ -157,7 +157,7 @@
   $page_content
 
   <!-- footor -->
-  <footer class="bg-secondary-subtle">
+  <footer class="bg-black subtle">
     <div class="container-lg py-5">
       <div class="row">
         <div class="col-md pb-5 pb-md-0">
